# VGS-Analysis-with-NLP

./: NintendoGames.csv  README.md  pyproject.toml  vgs-data-analysis.ipynb
